@@ -1,0 +1,7 @@
+fixtures:
+  repositories:
+    'stdlib':
+      repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
+      ref: '4.3.2'
+  symlinks:
+    "mediawiki": "#{source_dir}"
