@@ -1,10 +1,25 @@
-source :rubygems
+source ENV['GEM_SOURCE'] || "https://rubygems.org"
 
-gem 'puppet', '~> 2.7'
-
-group :test do
-  gem 'rake'
-  gem 'puppet-lint'
-  gem 'rspec-puppet', '>= 0.1.3'
-  gem 'puppetlabs_spec_helper'
+group :development, :test do
+  gem 'rake',                    :require => false
+  gem 'rspec-puppet',            :require => false
+  gem 'puppetlabs_spec_helper',  :require => false
+  gem 'serverspec',              :require => false
+  gem 'puppet-lint',             :require => false
+  gem 'pry',                     :require => false
+  gem 'simplecov',               :require => false
 end
+
+if facterversion = ENV['FACTER_GEM_VERSION']
+  gem 'facter', facterversion, :require => false
+else
+  gem 'facter', :require => false
+end
+
+if puppetversion = ENV['PUPPET_GEM_VERSION']
+  gem 'puppet', puppetversion, :require => false
+else
+  gem 'puppet', :require => false
+end
+
+# vim:ft=ruby
