@@ -1,9 +1,0 @@
-name 'yguenane-jpackage'
-version '0.1.0'
-summary 'A Puppet module that ensures jpackage repos are installed'
-description "This module ensures that jpackage repos are installed"
-license 'Apache License v2'
-author 'Yanis Guenane'
-source 'https://github.com/Spredzy/puppet-jpackage'
-project_page 'https://github.com/Spredzy/puppet-jpackage'
-
