@@ -1,3 +1,9 @@
+2014-08-22  Yanis Guenane  <yguenane@gmail.com> - 0.1.1
+
+  * Use metadata.json instead of Modulefile
+  * Use bool2num to determine wether or not a repo should be enabled
+  * Change Rakefile and spec/spec_helper.rb
+
 2013-02-19  Yanis Guenane  <yguenane@gmail.com> - 0.1.0
 
   * Create a test suite
